services/filebrowser/resources/filebrowser.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  annotations:
    keel.sh/policy: minor
    keel.sh/trigger: poll
spec:
  template:
    spec:
      containers:
        - image: filebrowser/filebrowser:v2.25.0
          name: filebrowser
          ports:
            - name: web
              containerPort: 80
          volumeMounts:
            - name: ripping-storage
              mountPath: /srv/ripping-storage
            - name: media
              mountPath: /srv/media
            - name: data
              mountPath: /srv/data
      volumes:
        - name: ripping-storage
          persistentVolumeClaim:
            claimName: ripping-storage
        - name: media
          persistentVolumeClaim:
            claimName: media
        - name: data
          persistentVolumeClaim:
            claimName: data

---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: web
      port: 80
      targetPort: web

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: filebrowser.durbin.casa
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  ingressClassName: nginx
  rules:
    - host: 'filebrowser.durbin.casa'
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: web
  tls:
    - hosts:
        - filebrowser.durbin.casa
      secretName: filebrowser-ingress-cert
