services/filebrowser/resources/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    gethomepage.dev/href: 'https://filebrowser.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: filebrowser
    gethomepage.dev/group: Admin
    gethomepage.dev/icon: filebrowser
    gethomepage.dev/name: File Browser
spec:
  ingressClassName: nginx
  rules:
    - host: filebrowser.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: web
